@@ -902,6 +902,12 @@ unpack_error:
 int
 pack_msg(slurm_msg_t const *msg, Buf buffer)
 {
+	if (msg->protocol_version < SLURM_MIN_PROTOCOL_VERSION) {
+		error("%s: Invalid message version=%hu, type:%hu",
+		      __func__, msg->protocol_version, msg->msg_type);
+		return SLURM_ERROR;
+	}
+
 	switch (msg->msg_type) {
 	case REQUEST_NODE_INFO:
 		_pack_node_info_request_msg((node_info_request_msg_t *)
