@@ -11,6 +11,7 @@ documents those changes that are of interest to users and administrators.
     workflows through the slurmd.
  -- Fix race condition which could leave a stepd hung on shutdown.
  -- CRAY - Add configuration for ATP to the ansible play script.
+ -- Fix potential to corrupt DBD message.
 
 * Changes in Slurm 17.02.5
 ==========================
